# timekeeper-plugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  conf.meson.build  meson_options.txt  svc_tk.c  svc_tk.h
cli/cmd/: tk_cmd.c
cli/include/tk/: client_tk.h  cmd_cli_tk.h
cli/src/: client_tk.c
common/include/: conf_templ.h.in  tk_defines.h
common/lpldgen/: cmds.txt  codegen.sh  config.json  module.json
common/lpldgen/include/: conf_payloads.h  conf_payloads.h.in  payloads.h  payloads_internal.h  pld_tk_plugin.h
common/lpldgen/src/: cJSON.c  payloads.c  payloads_pretty_print.c  pld_tk_plugin.c
common/src/: common.c
doc/: doxyfile  doxygen_mainpage.md
lib/sally-backends/: LICENSE  README.md
lib/sally-backends/com/: memcom_backend.c  posix_tty_backend.c
lib/sally-backends/fs/: fatfs_backend.c  posix_backend.c  yaffs_backend.c
lib/sally-backends/os/: cmsis_backend.c  freertos_backend.c  freertos_backend.h  posix_backend.c
scripts/: build.sh  clean.sh  serial_loopback.sh
srv/include/timekeeper/: server_tk.h
srv/src/: server_tk.c
subprojects/: csp.wrap  pld.wrap  srv-abs.wrap
tools/: .gitignore  README.md  build.sh  vscode.sh
tools/cppcheck/: cppcheck.cfg  cppcheck.sh
tools/meson/: base.meson.build  mgen.sh  template.meson.build
tools/vscode/: c_cpp_properties.json
